# Snake

./: .clang-format  .gitignore  CMakeLists.txt  README.md  dconfig
.github/workflows/: ci.yml  codeql.yml
data/: logo.txt
flatpak/: org.flatpak.Shellsnake.yml
snap/: snapcraft.yaml
snap/gui/: shellsnake.desktop
snap/hooks/: install
src/: .gitignore  AllegroEngine.hpp  CMakeLists.txt  IDrawable.cpp  IDrawable.h  IGraphicsEngine.h  IUpdatable.h  NCuresesEngine.cpp  NCuresesEngine.h  NCursesEngine.cpp  NCursesEngine.h  SnakeConfig.h  SnakeConfig.h.in  Xinterface.cpp  colors.cpp  colors.h  counter.cpp  counter.h  direction.h  fileManager.cpp  fileManager.h  game.cpp  game.h  image.cpp  image.h  label.cpp  label.h  main.cpp  menu.cpp  menu.h  objectid.h  result.cpp  result.h  scoreLogger.cpp  scoreLogger.h  setting.cpp  setting.h  settingsMenu.cpp  settingsMenu.h  snake.cpp  (+5 more)
test/: CMakeLists.txt  counterTest.cpp  fileManagerTest.cpp  gameTest.cpp  imageTest.cpp  labelTest.cpp  menuTest.cpp  mockScreen.h  resultTest.cpp  scoreLoggerTest.cpp  settingTest.cpp  settingsMenuTest.cpp  snakeTest.cpp  travellerTest.cpp
